# smalltts

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json
readme_samples/quality_pairs_20260216_123313/: manifest.json
readme_samples/quality_pairs_20260216_123313/sample_02_pony_laughter/: metadata.json
readme_samples/quality_pairs_20260216_123313/sample_06_genshin_voice_plain_announcement/: metadata.json
readme_samples/quality_pairs_20260216_123313/sample_07_genshin_voice_gasp_then_laugh/: metadata.json
readme_samples/quality_pairs_20260216_123313/sample_08_pony_sniff/: metadata.json
readme_samples/quality_pairs_20260216_123313/sample_10_genshin_voice_mixed_events/: metadata.json
scripts/: phonemize.py  test_checkpoint.py  tryme.py
scripts/infer/: batch.py  clone.py  interactive.py
scripts/train/: teacher.py
scripts/train/dmd2/: asr.py  distill.py  sv.py
server/: Cargo.toml
server/src/: main.rs  phonemize.rs  pipeline.rs
server/tests/: e2e.rs
src/scripts/: phonemize.py  test_checkpoint.py
src/scripts/infer/: batch.py  clone.py  interactive.py
src/scripts/train/: teacher.py
src/scripts/train/dmd2/: asr.py  distill.py
src/server/: Cargo.toml
src/server/src/: audio.rs  main.rs  phonemize.rs  pipeline.rs
src/server/tests/: e2e.rs
src/smalltts/: __init__.py
src/smalltts/assets/: ensure.py
src/smalltts/codec/: onnx.py
src/smalltts/data/: dummy.py
src/smalltts/data/phonemization/: normalizer.py  phonemes.py
src/smalltts/infer/: onnx.py  utils.py
src/smalltts/models/: asr.py  discriminator.py
src/smalltts/models/backbone/: dit.py  model.py  phonemes.py  style.py
src/smalltts/models/sv/: model.py  true.py
src/smalltts/train/: utils.py
src/website/: index.html  package.json
src/website/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
