[project]
name = "smalltts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "smallbraingames", email = "smallbraindev@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
