[project]
name = "smalltts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "smallbraingames", email = "smallbraindev@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "beartype>=0.21.0",
    "einops>=0.8.1",
    "inflect>=7.5.0",
    "jaxtyping>=0.3.2",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "phonemizer>=3.3.0",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]            # ← Ruff looks here
extend-ignore = ["F722"]

[tool.pyright]
ignore = ["src/smalltts/data/phonemization/normalizer.py"]
