[project]
name = "smalltts"
version = "0.1.0"
description = "superfast text-to-speech in any voice"
readme = "README.md"
authors = [
    { name = "small brain", email = "smallbraindev@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "accelerate>=1.10.1",
    "beartype>=0.21.0",
    "einops>=0.8.1",
    "inflect>=7.5.0",
    "jaxtyping>=0.3.2",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "phonemizer>=3.3.0",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "huggingface_hub>=0.23.2",
    "rich>=13.7.0",
    "sounddevice>=0.5.0",
    "onnx>=1.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-ignore = ["F722"]

[tool.pyright]
ignore = ["src/smalltts/data/phonemization/normalizer.py"]
