[package]
name = "smalltts-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
hound = "3"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
rand = "0.9"
rand_distr = "0.5"
rubato = "0.16"
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart"] }
